# versuch

./: Cargo.toml  README.md
.github/workflows/: ci-test.yml
solver/: Cargo.toml  queens.aspif  test.aspif  test.lp  test2.aspif  test2.lp  theory.aspif
solver/examples/: versuch.rs
solver/src/: aspif_writer.rs  convert.rs  lib.rs  main.rs  solver.rs
