[package]
name = "solver"
version = "0.1.0"
authors = ["Sven Thiele <sthiel78@gmail.com>"]
description = "A CDNL solver."
edition = "2021"
# documentation = "https://docs.rs/versuch"

[dependencies]
rustc-hash = "1.1.0"
genawaiter = { version = "0.99" }
string-interner = "0.14"
fnv = "1.0"                                                # deterministic HashMap
petgraph = "0.6"
aspif = { git = "https://github.com/sthiele/aspif-parser", branch = "st/wip" }
# aspif = {path = "../../aspif-parser"}


clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
stderrlog = "0.5"
